@@ -61,3 +61,7 @@ Contributors:
         - patch to fix use of libusb in configure.ac
     - Grégory S.
         - identified too-late check for null pointer
+    - Dmitry Nedospasov
+        - support for xmega devices
+    - Kees Bakker
+        - support for atxmega256a3bu
