@@ -129,6 +129,28 @@ static struct target_mapping_structure target_map[] = {
     { "at32uc3c2128",   tar_at32uc3c2128,   adc_AVR32, 0x2FEB, 0x03eb, 0x20000, 0x2000, false, 512, false, true,  0,   0      },
     { "at32uc3c2256",   tar_at32uc3c2256,   adc_AVR32, 0x2FEB, 0x03eb, 0x40000, 0x2000, false, 512, false, true,  0,   0      },
     { "at32uc3c2512",   tar_at32uc3c2512,   adc_AVR32, 0x2FEB, 0x03eb, 0x80000, 0x2000, false, 512, false, true,  0,   0      },
+    // Name             ID (arguments.h)    DevType    PID     VID     MemSize  BootSz  BootHi FPage Abort IF     EPage ESize
+    { "atxmega64a1u",   tar_atxmega64a1u,   adc_AVR32, 0x2FE8, 0x03eb, 0x10000, 0x1000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega128a1u",  tar_atxmega128a1u,  adc_AVR32, 0x2FED, 0x03eb, 0x20000, 0x2000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega64a3u",   tar_atxmega64a3u,   adc_AVR32, 0x2FE5, 0x03eb, 0x10000, 0x1000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega128a3u",  tar_atxmega128a3u,  adc_AVR32, 0x2FE6, 0x03eb, 0x20000, 0x2000, true,  512, true,  false, 32,  0x0800 },
+    { "atxmega192a3u",  tar_atxmega192a3u,  adc_AVR32, 0x2FE7, 0x03eb, 0x30000, 0x2000, true,  512, true,  false, 32,  0x0800 },
+    { "atxmega256a3u",  tar_atxmega256a3u,  adc_AVR32, 0x2FEC, 0x03eb, 0x40000, 0x2000, true,  512, true,  false, 32,  0x1000 },
+    { "atxmega16a4u",   tar_atxmega16a4u,   adc_AVR32, 0x2FE3, 0x03eb, 0x04000, 0x1000, true,  256, true,  false, 32,  0x0400 },
+    { "atxmega32a4u",   tar_atxmega32a4u,   adc_AVR32, 0x2FE4, 0x03eb, 0x08000, 0x1000, true,  256, true,  false, 32,  0x0400 },
+    { "atxmega64a4u",   tar_atxmega64a4u,   adc_AVR32, 0x2FDD, 0x03eb, 0x10000, 0x1000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega128a4u",  tar_atxmega128a4u,  adc_AVR32, 0x2FDE, 0x03eb, 0x20000, 0x2000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega256a3bu", tar_atxmega256a3bu, adc_AVR32, 0x2FE2, 0x03eb, 0x40000, 0x2000, true,  512, true,  false, 32,  0x1000 },
+    // Name             ID (arguments.h)    DevType    PID     VID     MemSize  BootSz  BootHi FPage Abort IF     EPage ESize
+    { "atxmega64b1",    tar_atxmega64b1,    adc_AVR32, 0x2FE1, 0x03eb, 0x10000, 0x1000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega128b1",   tar_atxmega128b1,   adc_AVR32, 0x2FEA, 0x03eb, 0x20000, 0x2000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega64b3",    tar_atxmega64b3,    adc_AVR32, 0x2FDF, 0x03eb, 0x10000, 0x1000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega128b3",   tar_atxmega128b3,   adc_AVR32, 0x2FE0, 0x03eb, 0x20000, 0x2000, true,  256, true,  false, 32,  0x0800 },
+    // Name             ID (arguments.h)    DevType    PID     VID     MemSize  BootSz  BootHi FPage Abort IF     EPage ESize
+    { "atxmega64c3",    tar_atxmega64c3,    adc_AVR32, 0x2FD6, 0x03eb, 0x10000, 0x1000, true,  256, true,  false, 32,  0x0800 },
+    { "atxmega128c3",   tar_atxmega128c3,   adc_AVR32, 0x2FD7, 0x03eb, 0x20000, 0x2000, true,  512, true,  false, 32,  0x0800 },
+    { "atxmega256c3",   tar_atxmega256c3,   adc_AVR32, 0x2FDA, 0x03eb, 0x40000, 0x2000, true,  512, true,  false, 32,  0x1000 },
+    { "atxmega384c3",   tar_atxmega384c3,   adc_AVR32, 0x2FDB, 0x03eb, 0x60000, 0x2000, true,  512, true,  false, 32,  0x1000 },
     { NULL }
 };
 
