@@ -93,6 +93,25 @@ enum targets_enum { tar_at89c51snd1c,
                     tar_at32uc3c2128,
                     tar_at32uc3c2256,
                     tar_at32uc3c2512,
+                    tar_atxmega64a1u,
+                    tar_atxmega128a1u,
+                    tar_atxmega64a3u,
+                    tar_atxmega128a3u,
+                    tar_atxmega192a3u,
+                    tar_atxmega256a3u,
+                    tar_atxmega16a4u,
+                    tar_atxmega32a4u,
+                    tar_atxmega64a4u,
+                    tar_atxmega128a4u,
+                    tar_atxmega256a3bu,
+                    tar_atxmega64b1,
+                    tar_atxmega128b1,
+                    tar_atxmega64b3,
+                    tar_atxmega128b3,
+                    tar_atxmega64c3,
+                    tar_atxmega128c3,
+                    tar_atxmega256c3,
+                    tar_atxmega384c3,
                     tar_none };
 
 enum commands_enum { com_none, com_erase, com_flash, com_user, com_eflash,
